--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 		<link
-			href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
-			rel="stylesheet"
-		/>
+      rel="stylesheet"
+      href="https://unpkg.com/@tailwindcss/ui/dist/tailwind-ui.min.css"
+    />
 
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
